[tool.poetry]
name = "repl-nix-scrapedown"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_scrapedown"}]

[tool.poetry.dependencies]
python = "^3.10"
html2text = "^2024.2.26"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
